kubernetes/clusters/home-kubernetes/apps/network/traefik/internal/dashboard/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: network
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: network
  hostnames:
    - traefik.home.mordex.io
  # rules:
  #   - matches:
  #       - path:
  #           type: PathPrefix
  #           value: /dashboard
  #     backendRefs:
  #       - name: traefik-internal
  #         namespace: network
  #         port: 8080
  #     filters:
  #       - type: ExtensionRef
  #         extensionRef:
  #           group: traefik.io
  #           kind: Middleware
  #           name: traefik-internal-dashboard-basicauth
