kubernetes/clusters/home-kubernetes/apps/network/traefik/internal/dashboard/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.home.mordex.io`)
      kind: Rule
      middlewares:
        - name: traefik-internal-dashboard-basicauth
          namespace: network
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
  # tls:
  #   secretName: home-mordex-io-tls
